@@ -1,13 +1,13 @@
 <html>
 <head>
-  <title>The XML C library for Gnome</title>
+  <title>The XSLT C library for Gnome explained</title>
   <meta name="GENERATOR" content="amaya V4.1">
   <meta http-equiv="Content-Type" content="text/html">
 </head>
 
 <body bgcolor="#ffffff">
 <p><a href="http://www.gnome.org/"><img src="smallfootonly.gif"
-alt="Gnome Logo"></a><a href="http://www.redhat.com"><img src="redhat.gif"
+alt="Gnome Logo"></a><a href="http://www.redhat.com/"><img src="redhat.gif"
 alt="Red Hat Logo"></a></p>
 
 <h1 align="center">The XSLT C library for Gnome explained</h1>
@@ -25,8 +25,10 @@ alt="Red Hat Logo"></a></p>
   <li><a href="#XSLT2">The XSLT template compilation</a></li>
   <li><a href="#processing">The processing itself</a></li>
   <li><a href="#XPath">XPath expressions compilation</a></li>
-  <li><a href="#XPath1">XPath expression interpretation</a></li>
-  <li><a href="#stack">The stack frame</a></li>
+  <li><a href="#XPath1">XPath interpretation</a></li>
+  <li><a href="#Descriptio">Description of XPath Objects</a></li>
+  <li><a href="#XPath2">XPath functions</a></li>
+  <li><a href="#stack">The variables stack frame</a></li>
   <li><a href="#Extension">Extension support</a></li>
   <li><a href="#Futher">Further reading</a></li>
   <li><a href="#TODOs">TODOs</a></li>
@@ -38,6 +40,10 @@ alt="Red Hat Logo"></a></p>
 href="http://xmlsoft.org/XSLT/">libxslt</a>, the <a
 href="http://www.w3.org/TR/xslt">XSLT</a> C library developped for the <a
 href="http://www.gnome.org/">Gnome</a> project.</p>
+
+<p>Note: this documentation is by definition incomplete and I am not good at
+spelling, grammar, so patches and suggestions are <a
+href="mailto:veillard@redhat.com">really welcome</a>.</p>
 
 <h2><a name="Basics">Basics</a></h2>
 
@@ -371,7 +377,7 @@ the next set of binary incompatible releases of libxml. For example the
 xmlXPathCtxt has a lot of unused parts and should probably be merged with
 xmlXPathParserCtxt.</p>
 
-<h2>Description of XPath Objects</h2>
+<h2><a name="Descriptio">Description of XPath Objects</a></h2>
 
 <p>An XPath expression manipulates XPath objects. XPath defines the default
 types boolean, numbers, strings and node sets. XSLT  adds the result tree
@@ -386,23 +392,106 @@ object which contains the list of pointers to the docuemnt nodes:</p>
 <p align="center"><img src="object.gif"
 alt="An Node set object pointing to "></p>
 
-<p> </p>
+<p>The <a href="http://xmlsoft.org/html/libxml-xpath.html">XPath API</a> (and
+its <a href="http://xmlsoft.org/html/libxml-xpathinternals.html">'internal'
+part</a>) includes a number of functions to create, copy, compare, convert or
+free XPath objects.</p>
 
-<h2><a name="stack">The variables stack frame</a></h2>
+<h2><a name="XPath2">XPath functions</a></h2>
 
-<p>@@</p>
+<p>All the XPath functions available to the interpreter are registered in the
+function hash table linked from the XPath context. They all share the same
+signature:</p>
+<pre>void xmlXPathFunc (xmlXPathParserContextPtr ctxt, int nargs);</pre>
+
+<p>The first argument is the XPath interprestation context, holding the
+interpretation stack. The second argument defines the number of objects passed
+on the stack for the function to consume (last argument is on top of the
+stack).</p>
+
+<p>Basically an XPath function does the following:</p>
+<ul>
+  <li>check <code>nargs</code> for proper handling of errors or functions with
+    variable numbers of parameters</li>
+  <li>pop the parameters from the stack using <code>obj =
+    valuePop(ctxt);</code></li>
+  <li>do the function specific computation</li>
+  <li>push the result parameter on the stack using <code>valuePush(ctxt,
+    res);</code></li>
+  <li>free up the input parameters with
+  <code>xmlXPathFreeObject(obj);</code></li>
+  <li>return</li>
+</ul>
+
+<p> sometime the work can be done directly by modifying in-situ the top object
+on the stack <code>ctxt-&gt;value</code>.</p>
+
+<h2><a name="stack">The XSLT variables stack frame</a></h2>
+
+<p>Not to be confused with XPath object stack, this stack holds the XSLT
+variables and parameters as they are defined through the recursive calls of
+call-template, apply-templates and default templates. This is used to define
+the scope of variables being called. </p>
+
+<p>This part seems to be the most urgent attention right now, first it is done
+in a very ineficient way since the location of the variables and
+parameterswithin the stylesheet tree is still done at run time (it really
+should be done statically at compile time), and I am still unsure that my
+understanding  of the template variables and parameter scope is actually
+right.</p>
+
+<p>This part of the documentation is still to be written once this part of the
+code will be stable. <span style="background-color: #FF0000">TODO</span></p>
 
 <h2><a name="Extension">Extension support</a></h2>
 
-<p>@@</p>
+<p>The API for registrering those is Not Yet Completed, it is possible do do
+though .... <span style="background-color: #FF0000">TODO</span></p>
 
 <h2><a name="Futher">Futher reading</a></h2>
 
-<p>@@</p>
+<p>Michael Kay wrote <a
+href="http://www-106.ibm.com/developerworks/library/x-xslt2/?dwzone=x?open&amp;l=132%2ct=gr%2c+p=saxon">a
+really interesting article on Saxon internals</a> and the work he did on
+performance issues. I wishes I had read it before starting libxslt design (I
+would probably have avoided a few mistakes and progressed faster). A lot of
+the ideas in his papers should be implemented or at least tried in
+libxslt.</p>
+
+<p>The <a href="http://xmlsoft.org/">libxml documentation</a>, especially <a
+href="http://xmlsoft.org/xmlio.html">the I/O interfaces</a> and the <a
+href="http://xmlsoft.org/xmlmem.html">memory management</a>.</p>
 
 <h2><a name="TODOs">TODOs</a></h2>
 
-<p>@@</p>
+<p>redesign the XSLT stack frame handling far too much work is done at
+execution time, similary for the attribute value templates handling, at least
+the embedded subexpressions ought to be precompiled.</p>
+
+<p>Implement and test some of the optimisation explained by Michael Kay
+especially:</p>
+<ul>
+  <li>static slot allocation on the stack frame</li>
+  <li>specific boolean interpretation of an XPath expression</li>
+  <li>some of the sorting optimization</li>
+  <li>Lazy evaluation of location path, this may require more changes but
+    sounds really interesting, XT does this too</li>
+  <li>Optimization of an expression tree (this could be done as a completely
+    independant module)</li>
+</ul>
+
+<p></p>
+Error reporting, there is a lot of case where the XSLT specification specify
+that a given construct is an error are not checked adequately by libxslt,
+basically one should do a complete pass on the XSLT spec again and add all
+tests to the stylesheet compilation. Using the DTD provided in appendix and
+making direct checks using the libxml validation API sounds a good idea too
+(though one should take care of not raising errors for elements/attributes in
+different namespaces).
+
+<p>Double check all the places where the stylesheet compiled form might be
+modified at run time (extra removal of blanks nodes, hint on the
+xsltCompMatch).</p>
 
 <p></p>
 
